--- a/fepp/index.html
+++ b/fepp/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
 
     <div class="header floatClear">
-        <img class="FL_LOGO" src="FE LOGO.png">
+        <img class="FL_LOGO" src="../FE LOGO.png">
         <h1 style="float:left; position: relative; left: 30px; top:10px;   text-shadow: 0 0 8px #adadad;"> Flat Earth App</h1>
 
     </div>
