--- a/fepp/index.html
+++ b/fepp/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div class="header floatClear">
+    <div class="header row">
         <img class="FL_LOGO" src="../FE LOGO.png">
-        <h1 style="float:left; position: relative; left: 30px; top:10px;   text-shadow: 0 0 8px #adadad;"> Flat Earth App</h1>
+        <h1 class="MainTitle"> Flat Earth App</h1>
 
     </div>
 
@@ -19,7 +19,7 @@
         <div class="leftcolumn">
             <div class="card">
                 <h2>Privacy Policy</h2>
-                <h5>last update, Aug 10, 2022</h5>
+                <h5>last update, Aug 12, 2022</h5>
                 <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
                 <p>Flat Earth is an application that was built fundamentally to provide a simple, easy to use tool to
                     display day night cycle, moon phases, sun and moon current overhead locations and more (refer to the
@@ -44,7 +44,7 @@
 
                 <h2>Information Collection and Use</h2>
 
-                <p>For a better experience, while using our the app, the app might ask you to provide it with certain
+                <p>For a better experience, while using the app, the you will be prompt to provide it with certain
                     personally identifiable information, including but not limited to GPS location to enhance compass
                     functionality . The information that I request will be retained on your device and is not collected
                     by me in any way.</p>
@@ -79,7 +79,7 @@
         </div>
         <div class="rightcolumn">
             <div class="card" style="overflow: auto;">
-                <h2>Contact me at:</h2>
+                <h2>Links:</h2>
                 <a class="icons" href="https://twitter.com/SimulationFlat" target="_blank">
                     <i class="bi bi-twitter" style="color:dodgerblue;"></i>
                 </a>
