--- a/fepp/index.html
+++ b/fepp/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div class="header row">
-        <img class="FL_LOGO" src="../FE LOGO.png">
-        <h1 class="MainTitle"> Flat Earth App</h1>
+    <div style="background:  #f1f1f1;" class="row">
+        <img class="fllogo" src="../FE LOGO.png">
+        <h1 class="maintitle"> Flat Earth App</h1>
 
     </div>
 
