--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="header floatClear">
-        <h1 style="float:left; position: relative; left: 30px; top:10px;"> TheOathMan temporary page</h1>
+        <h1 style="float:left; position: relative; left: 30px; top:10px;"> Links:</h1>
 
     </div>
 
@@ -18,7 +18,12 @@
         <div class="leftcolumn">
             <div class="card">
                 <!-- <h2>Welcome</h2> -->
-                <p>work in progress...</p>
+                <ul>
+                    <li>                <a href="https://theoathman.github.io/fepp/">Flat Earth Privacy Policy</a>
+                    </li>
+                    <li>                <a href="https://theoathman.github.io/support/">Support</a>
+                    </li>
+                  </ul>  
 
 
             </div>
