--- a/support/index.html
+++ b/support/index.html
@@ -14,22 +14,22 @@
 
     <div class="container mt-5">
         <h1> Contact The Developer</h1>
-        <form class="row g-3" form action="https://formsubmit.co/7bb88f814baa6058786eab76958b5cc1" method="POST">
+        <form class="row g-3" form action="https://formsubmit.co/oprojects07@gmail.com" method="POST">
           <div class="col-md-6">
             <label for="Title" class="form-label">Title</label>
-            <input type="text" class="form-control" id="Title" required>
+            <input type="text" class="form-control" name = "title" id="Title" required>
           </div>
           <div class="col-md-6">
             <label for="Device Information" class="form-label">Device Information</label>
-            <input type="text" class="form-control" id="Device Information" required>
+            <input type="text" class="form-control" name = "device info" id="Device Information" required>
           </div>
           <div class="col-md">
             <label for="emailInfo" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="emailInfo" required>
+            <input type="email" class="form-control" name = "email" id="emailInfo" required>
           </div>
           <div class="col-md-12">
             <label for="Description" class="form-label">Description</label>
-            <textarea class="form-control" id="Description" rows="3" required></textarea>
+            <textarea class="form-control" id="Description" name = "description" rows="3" required></textarea>
           </div>
           <div class="col-md-12">
             <button type="submit" class="btn btn-primary">Submit</button>
