--- a/support/index.html
+++ b/support/index.html
@@ -14,7 +14,7 @@
 
     <div class="container mt-5">
         <h1> Contact The Developer</h1>
-        <form class="row g-3" form action="https://formsubmit.co/oprojects07@gmail.com" method="POST">
+        <form class="row g-3" form action="https://formsubmit.co/7bb88f814baa6058786eab76958b5cc1" method="POST">
           <div class="col-md-6">
             <label for="Title" class="form-label">Title</label>
             <input type="text" class="form-control" name = "title" id="Title" required>
