--- a/EarthPi/index.html
+++ b/EarthPi/index.html
@@ -10,15 +10,23 @@
 <body>
 
     <div style="background:  #f1f1f1;" class="row">
-        <img class="fllogo" src="../logoraw.png">
+        <img class="fllogo" src="\earthpi-logo.png">
         <h1 class="maintitle"> EarthPi</h1>
-
     </div>
 
     <div class="row">
         <div class="leftcolumn">
-            <div class="card">
-                <h2>Terms of Service and Privacy Policy</h2>
+            <div class="container card">
+
+                
+            <!-- <div class="logo"> -->
+            <img src="\earthpi-logo.png" class="logo-TOS" id="toslogo" style="display: none;">
+                    <!-- <p class="logo-text">EarthPi</p> -->
+            <!-- </div>                 -->
+                <!-- <div class="logo"> -->
+                <!-- </div> -->
+
+                <h1>Terms of Service and Privacy Policy</h1>
                 <h5>last update, Jan 21, 2025</h5>
         
                 <h2>1. Acceptance of Terms</h2>
