--- a/Tma/index.html
+++ b/Tma/index.html
@@ -9,16 +9,21 @@
 
 <body>
 
+    <!-- <script>
+        window.location.href = "https://oproject.xyz"
+    </script> -->
+
     <div style="background:  #f1f1f1;" class="row">
-        <img class="fllogo" src="../ThemoonLogo.png">
+        <img class="fllogo" src="../TheMoon-logo.png">
         <h1 class="maintitle"> The Moon App</h1>
 
     </div>
 
     <div class="row">
         <div class="leftcolumn">
-            <div class="card">
-                <h2>Terms of Service and Privacy Policy</h2>
+            <div class="container card">
+                <img src="\TheMoon-logo.png" class="logo-TOS" id="toslogo" style="display: none;">
+                <h1>Terms of Service and Privacy Policy</h1>
                 <h5>last update, Jun 14, 2024</h5>
         
                 <h2>1. Acceptance of Terms</h2>
@@ -89,6 +94,7 @@
     <!-- <div class="footer">
   <h2>Footer</h2>
 </div> -->
+
 
 </body>
 
