--- a/fepp/index.html
+++ b/fepp/index.html
@@ -10,15 +10,16 @@
 <body>
 
     <div style="background:  #f1f1f1;" class="row">
-        <img class="fllogo" src="../FE LOGO.png">
+        <img class="fllogo" src="../fe-logo.png">
         <h1 class="maintitle"> Flat Earth App</h1>
 
     </div>
 
     <div class="row">
         <div class="leftcolumn">
-            <div class="card">
-                <h2>Privacy Policy</h2>
+            <div class="container card">
+                <img src="\fe-logo.png" class="logo-TOS" id="toslogo" style="display: none;">
+                <h1>Privacy Policy</h1>
                 <h5>last update, Aug 12, 2022</h5>
                 <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
                 <p>Flat Earth is an application that was built fundamentally to provide a simple, easy to use tool to
