--- a/guide/guide.html
+++ b/guide/guide.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App Guide</title>
+    <script src="/guide/guide.js"></script>
+
     <style>
         * {
             margin: 0;
@@ -19,7 +21,7 @@
             padding: 20px;
         }
         
-        .container {
+        .section {
             max-width: 1200px;
             margin: 0 auto;
             background: white;
@@ -45,7 +47,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="section">
         <!-- <header>
             <h1>App Feature Guide</h1>
             <p class="subtitle">Click on the numbered hotspots to learn about each feature</p>
@@ -55,7 +57,7 @@
             <p>Click on the numbered circles in the screenshot to learn about each feature</p>
         </div>
         
-        <div class="guide-container" id="GuideContainer">
+        <div class="container guide-container" id="GuideContainer">
             <link rel="stylesheet" href="/guide/guide.css">
             <link rel="stylesheet" href="/css/highlights.css">
             <div class="image-section">
@@ -87,6 +89,5 @@
             <p>© 2023 Your Company Name. All rights reserved.</p>
         </footer> -->
     </div>
-<script src="/guide/guide.js"></script>
 </body>
 </html>
