--- a/pages/template.html
+++ b/pages/template.html
@@ -27,28 +27,27 @@
    
             <section class="how-to" id="how-to">
                 <!-- <h2>How to get started</h2> -->
-                <h2><span id="short-name-3">app name</span> Guide</h2>
+                <h2 style="display: inline;"><span id="short-name-3">app name</span> Guide </h2> 
+                <a href="" id="Link-to-guide">
+                    <p style="display: inline; font-size: 15px;"><i class="fa-solid fa-link"></i></p>
+                </a>
                 <!-- <p id="how-to-text"> test text bla bla</p> -->
             </section>
 
             <section class="download">
-            <h2>Download <span id="short-name-2"></span></h2>
-            <!-- <p>Available for Android and iOS.</p> -->
-            <p class="small" id="version-info"></p>
-            <div class="buttons">
-            <a href="#" id="android-link" class="btn btn-android"><i class="fab fa-google-play"></i> Android</a>
-            <a href="#" id="ios-link" class="btn btn-ios"><i class="fab fa-google-play"></i> iOS</a>
-            <a href="#" id="web-link" class="btn btn-web">Play on Web</a>
-            </div>
+                <h2>Download <span id="short-name-2"></span></h2>
+                <!-- <p>Available for Android and iOS.</p> -->
+                <p class="small" id="version-info"></p>
+                <div class="buttons">
+                    <a href="#" id="android-link" class="btn btn-android"><i class="fab fa-google-play"></i> Android</a>
+                    <a href="#" id="ios-link" class="btn btn-ios"><i class="fab fa-google-play"></i> iOS</a>
+                    <a href="#" id="web-link" class="btn btn-web">Play on Web</a>
+                </div>
             </section>
 
-            <!-- <section class="connect">
-            <p>
-            Made by <strong>Your Name</strong> — a solo dev who loves building small tools.
-            <br>
-            Have feedback? <a href="mailto:you@email.com">Say hi</a> — I reply to every message.
-            </p>
-            </section> -->
+            <section class="connect">
+                <p>Please read term of use <a id="TOS-link" href="#">here</a>.</p>
+            </section>
         </div>
     </div>
 <!-- <script src="data\earthpi_data.js"></script> -->
