--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>OProject</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome-free-7.0.0-web\css\all.min.css">
+    <link rel="icon" type="image/webp" href="favicon.webp">
 </head>
 <body>
     <!-- Header -->
@@ -51,7 +52,7 @@
     </section> -->
 
     <!-- Apps Section -->
-    <section class="section">
+    <section class="section" id="section">
         <div class="container">
             <div class="section-title">
                 <h2>My Published Apps</h2>
@@ -145,7 +146,10 @@
                 
                 <div class="footer-column">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-envelope"></i> oprojects07@gmail.com</p>
+                    <a href="mailto:oprojects07@gmail.com">
+                        <p><i class="fas fa-envelope"></i> oprojects07@gmail.com</p>
+                    </a>
+                    
                     <!-- <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p> -->
                     <!-- <p><i class="fas fa-map-marker-alt"></i> San Francisco, CA</p> -->
                 </div>
