--- a/fepp/index.html
+++ b/fepp/index.html
@@ -73,8 +73,7 @@
                 <h2>Contact Me</h2>
                 <p>This service is being developed by a solo developer, I may not respond immediately because of that.
                     However, If you have any questions or suggestions about my Privacy Policy, do not hesitate to
-                    contact me and I will do my best at <a
-                        href="mailto: oprojects07@gmail.com">oprojects07@gmail.com</a>.</p>
+                    contact me and I will do my best.</p>
 
             </div>
         </div>
