--- a/Tma/index.html
+++ b/Tma/index.html
@@ -62,8 +62,7 @@
                 <h2>12. Contact Information</h2>        
                 <p>This app is being developed by a solo developer, I may not respond immediately because of that.
                     However, If you have any questions or suggestions about my Privacy Policy or the app in general, do not hesitate to
-                    contact me and I will do my best at <a
-                        href="mailto: oprojects07@gmail.com">oprojects07@gmail.com</a>.</p>
+                    contact me and I will do my best.</p>
 
             </div>
         </div>
