--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 
                 <div class="footer-column">
                     <h3>Contact Info</h3>
-                    <a href="mailto:oprojects07@gmail.com">
+                    <a href="#" onclick="myemail()">
                         <p><i class="fas fa-envelope"></i> oprojects07@gmail.com</p>
                     </a>
                     
