--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="app-badges">
                                 <a href="https://play.google.com/store/apps/details?id=com.oproject.earthpi&hl=en" class="badge play-store"><i class="fab fa-google-play"></i> Google Play</a>
                                 <a href="https://apps.apple.com/app/earthpi/id6741358020?uo=4" class="badge app-store"><i class="fab fa-apple"></i> App Store</a>
-                                <a href="#" class="badge Web"><i class="fa-solid fa-desktop"></i> Web</a>
+                                <!-- <a href="#" class="badge Web"><i class="fa-solid fa-desktop"></i> Web</a> -->
                             </div>
                         </div>
                     </a>
